# word_matrix

./: .gitignore  CMakeLists.txt  README.md
data/: text_file  text_file_short
src/: definitions.hpp  main.cpp  process.cpp  process.hpp  process_ite.cpp  process_ite.hpp  process_rec.cpp  process_rec.hpp  word_matrix_ite.cpp  word_matrix_rec.cpp
